--- a/template/backup/readme
+++ b/template/backup/readme
@@ -1,3 +1,4 @@
 v0.1 - Original template used by Ivan/Jean
 v0.2 - Frequency doubler enabled for 50 MHz clock from RP
 v0.3 - MUXout set to DLD (R39 = 5A)
+v0.4 - PLL_N = 0x64 (N = 100) R16
