updated ramps and template

--- a/template/backup/readme
+++ b/template/backup/readme
@@ -1,4 +1,5 @@
 v0.1 - Original template used by Ivan/Jean
 v0.2 - Frequency doubler enabled for 50 MHz clock from RP
 v0.3 - MUXout set to DLD (R39 = 5A)
-v0.4 - PLL_N = 0x64 (N = 100) R16
+v0.4 - RAMP_EN set low on startup (R58 = 20)
+v0.5 - PLL_N = 0x64 (N = 100) R16
